added missing routes for multiplayer and fixed a few issues in match handling
